syntax = "proto3";
package users;

service UserService {
  rpc GetUserById (UserRequest) returns (UserResponse);
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetAllUsers (Empty) returns (UsersResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (UserRequest) returns (Empty);
  rpc GetChildByCustomerId(UserRequest) returns (ChildrenResponse); 

  rpc GetChildById (ChildRequest) returns (ChildResponse);
  rpc CreateChild (CreateChildRequest) returns (ChildResponse);
  rpc GetAllChildren (Empty) returns (ChildrenResponse);
  rpc UpdateChild (UpdateChildRequest) returns (ChildResponse);
  rpc DeleteChild (ChildRequest) returns (Empty);

  rpc GetStaffScheduleById (StaffScheduleRequest) returns (StaffScheduleResponse);
  rpc CreateStaffSchedule (CreateStaffScheduleRequest) returns (StaffScheduleResponse);
  rpc GetAllStaffSchedules (Empty) returns (StaffSchedulesResponse);
  rpc UpdateStaffSchedule (UpdateStaffScheduleRequest) returns (StaffScheduleResponse);
  rpc DeleteStaffSchedule (StaffScheduleRequest) returns (Empty);
  rpc GetScheduleByStaffId (StaffRequest) returns (StaffSchedulesResponse);

}

message Empty {}

message UserRequest {
  int32 user_id = 1;
}

message UserResponse {
  int32 id = 1;
  string full_name = 2;
  string email = 3;
  string phone = 4;
  string role = 5;
  repeated StaffScheduleResponse staff_schedules = 6;
   string status = 7;
}

message CreateUserRequest {
  string full_name = 1;
  string email = 2;
  string phone = 3;
  string password = 4;
  string role = 5;
}

message UsersResponse {
  repeated UserResponse users = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  string full_name = 2;
  string email = 3;
  string phone = 4;
  string role = 5;
}

message ChildRequest {
  int32 child_id = 1;
}

message ChildResponse {
  int32 id = 1;
  int32 user_id = 2;
  string full_name = 3;
  string birthday = 4;
  string gender = 5;
}

message CreateChildRequest {
  int32 user_id = 1;
  string full_name = 2;
  string birthday = 3;
  string gender = 4;
}

message ChildrenResponse {
  repeated ChildResponse children = 1;
}

message UpdateChildRequest {
  int32 id = 1;
  string full_name = 2;
  string birthday = 3;
  string gender = 4;
}

message StaffScheduleRequest {
  int32 staff_schedule_id = 1;
}

message StaffScheduleResponse {
  int32 id = 1;
  int32 staff_id = 2;
  string shift_date = 3;
  ShiftTime shift_time = 4;
}

message CreateStaffScheduleRequest {
  int32 staff_id = 1;
  string shift_date = 2;
  ShiftTime shift_time = 3;
}

message StaffSchedulesResponse {
  repeated StaffScheduleResponse schedules = 1;
}

message UpdateStaffScheduleRequest {
  int32 id = 1;
  int32 staff_id = 2;
  string shift_date = 3;
  ShiftTime shift_time = 4;
}

message StaffRequest {
  int32 staff_id = 1;
}

enum ShiftTime {
  MORNING = 0;
  AFTERNOON = 1;
  EVENING = 2;
}